--- a/src/main/resources/templates/web/movie/movie-watch.html
+++ b/src/main/resources/templates/web/movie/movie-watch.html
@@ -144,7 +144,7 @@
         <div class="more-like-this">
             <div class="title-relate">
                 <h4 class="romantic-heading">
-                    More LIke This
+                    MORE LIKE THIS
                 </h4>
             </div>
             <div class="row-movie-relate">
