searh movie, movie relate( need to fix UI)
Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/templates/web/layout/header.html
+++ b/src/main/resources/templates/web/layout/header.html
@@ -38,7 +38,7 @@
     </ul>
 
     <div class="righticons d-flex flex-end flex-middle">
-        <a href="search.html">
+        <a th:href="@{/movies/search}">
             <i aria-hidden="true" class="fa fa-search icon-search"></i>
         </a>
         <div class="dropdown notification">
