--- a/src/main/resources/static/web/css/custom.css
+++ b/src/main/resources/static/web/css/custom.css
@@ -60,7 +60,62 @@
     vertical-align: middle;
     line-height: 2rem;
 }
+.container-search{
+    height: 100%;
+}
+.form-search{
+    display: flex;
+    justify-content: center;
+}
 
+.container-search .form-search  select, input{
+    margin-right: 2rem;
+    height: 3rem;
+    width: 10rem;
+    border-radius: 5px;
+    border:yellow solid 2px;
+    font-size: 1rem;
+    background-color: white;
+}
+
+.container-search .form-search input:hover{
+    background-color: aqua;
+    cursor: pointer;
+}
+
+.data-search{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    justify-self: start;
+}
+
+.data-search .movie-search{
+    width: 17%;
+    height: 400px;
+    margin-top: 1.8rem;
+}
+
+.data-search img{
+    width: 100%;
+    height: 80%;
+    object-fit: contain;
+    overflow: hidden;
+}
+
+.data-search .infor-movie p{
+    display: block;
+    margin-left: 1rem;
+    margin-block-start: 0px;
+    margin-block-end:0px;
+    color: yellow;
+    font-size: 0.9rem;
+}
+
+.container-search{
+    margin-top: 7rem;
+}
 
 
 
