edit phim bo, xem phim bo
Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/static/web/css/movie-detail.css
+++ b/src/main/resources/static/web/css/movie-detail.css
@@ -2,7 +2,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 1170px;
-    height: 1170px;
+    height: 110%;
 }
 .column {
     float: left;
