--- a/src/main/resources/templates/admin/admin-layout.html
+++ b/src/main/resources/templates/admin/admin-layout.html
@@ -50,7 +50,11 @@
                 </a>
                 <a class="nav-link" th:href="@{/admin/movies}">
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                    Quản lý phim
+                    Quản lý phim lẻ
+                </a>
+                <a class="nav-link" th:href="@{/admin/movies/series}">
+                    <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                    Quản lý phim bộ
                 </a>
                 <a class="nav-link" th:href="@{/admin/genre-manager}">
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
