--- a/src/main/resources/templates/admin/movie/movie-manager.html
+++ b/src/main/resources/templates/admin/movie/movie-manager.html
@@ -19,7 +19,7 @@
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-table me-1"></i>
-                        Danh sách thể loại
+                        Danh sách phim lẻ
                     </div>
                     <div class="card-body">
                         <table class="table table-dark mb-3">
