--- a/src/main/resources/templates/admin/director-manager.html
+++ b/src/main/resources/templates/admin/director-manager.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="vi"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="admin/admin-layout.html::head">
+<head th:replace="admin/layout/admin-layout.html::head">
 </head>
 <body class="sb-nav-fixed">
-<nav th:replace="admin/admin-layout.html::header">
+<nav th:replace="admin/layout/admin-layout.html::header">
 
 </nav>
 <div id="layoutSidenav">
-    <div th:replace="admin/admin-layout.html::menu">
+    <div th:replace="admin/layout/admin-layout.html::menu">
     </div>
 
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
                 <div class="row mt-5 d-flex justify-content-center">
-                    <div class="col-md-3">
                         <div class="mb-3">
                             <label class="form-label" for="txtNameDirector">Tên đạo diễn</label>
                             <input class="form-control" id="txtNameDirector" type="text">
@@ -23,13 +22,13 @@
                         <div class="mb-3">
                             <button class="btn btn-primary" id="addDirector" type="button">Thêm đạo diễn</button>
                         </div>
-                    </div>
 
-                    <div class="col-md-6">
-                        <div className="card">
+
+
+                        <div className="card mb-4">
                             <h5 className="card-header">Danh sách đạo diễn</h5>
                             <div className="card-body">
-                                <table class="table table-dark table-borderless" id="directorTable">
+                                <table class="directorTable" id="datatablesSimple">
                                     <thead>
                                     <tr>
                                         <th scope="col">Mã</th>
@@ -50,17 +49,14 @@
                                 </table>
                             </div>
                         </div>
-
                     </div>
                 </div>
-
-            </div>
         </main>
-        <footer th:replace="admin/admin-layout.html::footer">
+        <footer th:replace="admin/layout/admin-layout.html::footer">
         </footer>
     </div>
 </div>
-<section th:replace="admin/admin-layout.html::js">
+<section th:replace="admin/layout/admin-layout.html::js">
 </section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script th:src="@{/admin/js/director.js}" type="application/javascript">
