--- a/src/main/resources/templates/admin/layout/admin-layout.html
+++ b/src/main/resources/templates/admin/layout/admin-layout.html
@@ -15,25 +15,24 @@
 <body>
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark" th:fragment="header">
     <!-- Navbar Brand-->
-    <a class="navbar-brand ps-3" href="index.html">Admin MovieOnl</a>
+    <a class="navbar-brand ps-3" href="http://localhost:8080/admin/home">Admin MovieOnl</a>
     <!-- Sidebar Toggle-->
     <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
     <!-- Navbar Search-->
     <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
         <div class="input-group">
-            <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
-            <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
         </div>
     </form>
     <!-- Navbar-->
     <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+            <a class="nav-link dropdown-toggle" id="navbarDropdown"
+                role="button"
+               data-bs-toggle="dropdown"
+               aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#!">Settings</a></li>
-                <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#!">Logout</a></li>
+                <li><a class="dropdown-item" th:href="@{/login}">Đăng nhập</a></li>
+                <li><a class="dropdown-item" th:href="@{/logout}">Đăng xuất</a></li>
             </ul>
         </li>
     </ul>
@@ -43,11 +42,7 @@
     <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
         <div class="sb-sidenav-menu">
             <div class="nav">
-                <div class="sb-sidenav-menu-heading">Addons</div>
-                <a class="nav-link" href="charts.html">
-                    <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                    Charts
-                </a>
+                <div class="sb-sidenav-menu-heading">Thông tin quản lý</div>
                 <a class="nav-link" th:href="@{/admin/movies}">
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                     Quản lý phim lẻ
