--- a/src/main/resources/templates/admin/movie/movie-add.html
+++ b/src/main/resources/templates/admin/movie/movie-add.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="admin/admin-layout.html::head">
+<head th:replace="admin/layout/admin-layout.html::head">
 </head>
 <body class="sb-nav-fixed">
-<nav th:replace="admin/admin-layout.html::header"></nav>
+<nav th:replace="admin/layout/admin-layout.html::header"></nav>
 <div id="layoutSidenav">
-    <div th:replace="admin/admin-layout.html::menu">
+    <div th:replace="admin/layout/admin-layout.html::menu">
     </div>
     <div id="layoutSidenav_content">
         <main>
