--- a/src/main/resources/templates/admin/movie/movie-series.html
+++ b/src/main/resources/templates/admin/movie/movie-series.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="vi"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="admin/admin-layout.html::head">
+<head th:replace="admin/layout/admin-layout.html::head">
 </head>
 <body class="sb-nav-fixed">
-<nav th:replace="admin/admin-layout.html::header">
+<nav th:replace="admin/layout/admin-layout.html::header">
 
 </nav>
 <div id="layoutSidenav">
-    <div th:replace="admin/admin-layout.html::menu">
+    <div th:replace="admin/layout/admin-layout.html::menu">
     </div>
 
     <div id="layoutSidenav_content">
@@ -50,10 +50,11 @@
                                         <span class="badge badge-default" th:unless="${movie.status==true}"> Hết phát</span>
                                     </td>
                                     <td class="w-25">
-                                        <a class="btn btn-info mx-3"
+                                        <a class="btn btn-secondary mx-3"
                                                 th:href="@{/admin/movies/series/add/{id}(id=${movie.id})}">
                                                     Thêm tập</a>
-                                        <a class="btn btn-danger"type="button">Chi tiết</a>
+                                        <a class="btn btn-info my-3"type="button">Chi tiết</a>
+                                        <button class="btn btn-danger"type="button">Vô hiệu hóa</button>
                                     </td>
                                 </tr>
                             </table>
@@ -63,11 +64,11 @@
 
             </div>
         </main>
-        <footer th:replace="admin/admin-layout.html::footer">
+        <footer th:replace="admin/layout/admin-layout.html::footer">
         </footer>
     </div>
 </div>
-<section th:replace="admin/admin-layout.html::js">
+<section th:replace="admin/layout/admin-layout.html::js">
 </section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script th:src="@{/admin/js/cast.js}" type="application/javascript">
