--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,20 +19,14 @@
                             <label for="floatingPassword">Mật khẩu</label>
                             <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Nhập mật khẩu">
                         </div>
-
-                        <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
-                            <label class="form-check-label" for="rememberPasswordCheck">
-                                Remember password
-                            </label>
-                        </div>
                         <div class="d-grid">
                             <button class="btn btn-primary btn-login text-uppercase fw-bold"
                                     type="submit">Đăng nhập</button>
                         </div>
                         <hr class="my-4">
                         <div class="d-grid mb-2">
-
+                            <a class="d-block text-center mt-2 small" th:href="@{/register}">Chưa có tài khoản, đăng ký</a>
+                            <a class="d-block text-center mt-2 small" th:href="@{/}">Chưa đăng nhập, đi đến trang chủ</a>
                         </div>
                         <div class="d-grid">
 
